# wasm-semantics-fuzzer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  parser.rs  rng.rs  serializer.rs  wasm.rs
