[package]
name = "wasm-semantics-fuzz"
version = "0.1.0"
authors = ["Jay Bosamiya <jaybosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.0"

# Speed up `backtrace` even on a debug build. Suggested by `color-eyre`.
[profile.dev.package.backtrace]
opt-level = 3
